<resources>

    <!-- names -->

    <string name="app_name">NOTES</string>
    <string name="title_new_note">создать</string>
    <string name="title_edit_note">редактировать</string>
    <string name="title_setting">настройки</string>
    <string name="title_notes">ЗАМЕТКИ</string>

    <!-- views -->

    <string name="welcome">Добро пожаловать в заметки!</string>
    <string name="choose_theme">Выбрать новую тему</string>
    <string name="choose_size_text">Изменить размер текста</string>
    <string name="name_note">заголовок</string>
    <string name="text_note">текст</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="date_dd">день</string>
    <string name="date_mm">месяц</string>
    <string name="date_year">год</string>
    <string name="select_date">установить крайний срок</string>
    <string name="ok">OK</string>
    <string name="button_save">сохранить</string>
    <string name="change_pin">Изменить пароль</string>
    <string name="save_mode">сохранить настройки</string>
    <string name="pin_new">новый PIN</string>
    <string name="pin_old">старый PIN</string>
    <string name="new_pin">установить PIN:</string>
    <string name="old_pin">актуальный PIN:</string>
    <string name="pin_off">Выключить запрос PIN \n и очистить данные</string>
    <string name="item_save">сохранить</string>
    <string name="item_clear">очистить</string>
    <string name="item_share">поделиться</string>
    <string name="item_settings">настройки</string>
    <string name="item_other_settings">другие настройки</string>
    <string name="item_about">о программе</string>
    <string-array name="theme">
        <item> </item>
        <item>Холодный</item>
        <item>Темный</item>
        <item>Классический</item>
        <item>Яркий</item>
    </string-array>

    <!-- dialogs -->

    <string name="dialog_OffPin">Для отключения введите актуальный PIN</string>
    <string name="dialog_delete">Удалить заметку?</string>
    <string name="dialog_info">О программе</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_cancel">отмена</string>

    <!-- massages -->

    <string name="toast_deadline_no">без крайней даты</string>
    <string name="toast_clear_Pin">сброс пароля</string>
    <string name="toast_clear">очистка полей от данных</string>
    <string name="toast_saved">данные сохранены</string>
    <string name="toast_not_saved">не удалось сохранить данные</string>
    <string name="toast_enter4">введите четыре цифры</string>
    <string name="toast_enter_PIN">введите текущий PIN</string>
    <string name="toast_error_PIN">не верно введен PIN</string>
    <string name="toast_saved_PIN">сохранен PIN</string>
    <string name="toast_saved_PINOff">запрос PIN выключен</string>
    <string name="toast_not_saved_PIN">ошибка сохранения PIN</string>
    <string name="toast_error_add">нет данных</string>
    <string name="toast_newPin_add">установите новый PIN</string>
    <string name="toast_addPin">установите новый PIN</string>
    <string name="share_no">нет разрешения на отправку сообщений</string>
    <string name="toast_error_editDateEmpty">заполните все поля даты</string>
    <string name="toast_error_editDate">не корректно заполнены даты</string>

    <!-- info -->

    <string name="about_program">
        \nДОБРО ПОЖАЛОВАТЬ В ПРОГРАММУ ЗАМЕТКИ.\n\n
        Вы можете защитить сохраненную информацию в своих заметках от посторонних глаз при помощи четырехзначного пароля, пароль можно менять перейдя в настройки после нажатия шестиренки или отключить запрос пароля, там же можно поменять тему приложения.\n\n
        Для создания новой заметки, просто нажмите на копку плюс внизу экрана, а после внесения информации не забудьте сохранить данные нажав дискету ввеху экрана, рядом есть кнопка для сброса всех внесенных данных на экране.\n\n
        Вы можете устанавливать крайние сроки выполнения запланированных задач. Задачи, которые истекают сегодня, будут подсвечиваться желтым цветом, а те что просрочены красным.\n\n
        Для того что бы удалить заметку выберите ее из списка и используйте долгое нажатие.\n\n
        Для редактирования данных используйте одно касание выбранной заметки.\n\n
        Вы можете делиться своими записями через сторонние приложения одобрив разрешение на отправку сообщений через данное приложение.\n
    </string>

</resources>
