<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ru.android.polenova.NewNoteActivity">

        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:orderInCategory="100"
            android:title="@string/item_share"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_save_24dp"
            android:orderInCategory="100"
            android:title="@string/item_save"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_clear"
            android:icon="@drawable/ic_delete_24dp"
            android:orderInCategory="100"
            android:title="@string/item_clear"
            app:showAsAction="always" />

</menu>