<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editNameNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_note"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <MultiAutoCompleteTextView
                android:id="@+id/multiTextNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_note" />

            <CheckBox
                android:id="@+id/checkBoxSelectDeadLine"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonCalendar"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    app:srcCompat="@drawable/ic_insert_invitation_black_24dp" />


                <EditText
                    android:id="@+id/editDeadLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_note"
                    android:inputType="date"/>

            </LinearLayout>

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>